# alphapil

./: .gitignore  ALPHAPIL_MANIFEST.txt  CNAME  CONTRIBUTING.md  GEMINI.md  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml
alphapil/docs/: 404.html  index.html  sitemap.xml
alphapil/docs/examples/: index.html
alphapil/docs/getting-started/: index.html
alphapil/docs/integration/: index.html
alphapil/docs/search/: search_index.json
alphapil/docs/syntax/: index.html
alphapil/docs/whats-new/: index.html
docs/: examples.md  getting-started.md  index.md  integration.md  syntax.md  whats-new.md
docs/functions/: core.md  geometric.md  images.md  text.md  utils.md
docs/functions/core/: createCanvas.md  getBytes.md  getSystemFonts.md  getVar.md  loadFont.md  save.md  setColor.md  setFont.md  setOutputFormat.md  setStroke.md  setVar.md
docs/functions/geometric/: drawArc.md  drawCircle.md  drawLine.md  drawPolygon.md  drawRect.md  drawRoundedRect.md  drawStar.md  drawTriangle.md
docs/functions/groups/: endClip.md  endContainer.md  endGroup.md  startClip.md  startContainer.md  startGroup.md
docs/functions/images/: adjustColor.md  blur.md  clearImageCache.md  drawBarChart.md  drawImage.md  drawLineChart.md  drawLinearGradient.md  drawPattern.md  drawProgressBar.md  drawRadialGradient.md  imageFilter.md  rotate.md  rotateCanvas.md  rotateLayer.md  (+1 more)
src/alphapil/: __init__.py  engine.py  interpreter.py  picker.py
tools/: README.md  coordinate_picker.py  gen_docs.py  previewer.py  requirements.txt
(+110 files in other folders)
